[gd_scene load_steps=6 format=3 uid="uid://dcj2a2c0sdy8h"]

[ext_resource type="Script" path="res://Scripts/S_Opciones.gd" id="1_mx1or"]
[ext_resource type="VideoStream" path="res://VIDEOs/VideoFondo.ogv" id="2_dks5o"]
[ext_resource type="AudioStream" uid="uid://c7xbjvyxhd3tb" path="res://Audio/The Ghosts Within.mp3" id="3_3ottv"]
[ext_resource type="FontFile" uid="uid://cfq7odda7iiwk" path="res://FUENTES_DE_LETRAS/WATCHER PERONAL USE.ttf" id="3_d6tml"]
[ext_resource type="FontFile" uid="uid://myi5a8ue02ln" path="res://FUENTES_DE_LETRAS/Run! Demo.otf" id="4_od41v"]

[node name="EscenaOpciones" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mx1or")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_dks5o")
autoplay = true
expand = true
loop = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
visible = false
stream = ExtResource("3_3ottv")
autoplay = true
bus = &"Musica"
parameters/looping = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.344
anchor_top = 0.475
anchor_right = 0.62
anchor_bottom = 0.943
offset_left = -0.288025
offset_top = 0.199982
offset_right = -0.23999
offset_bottom = -0.0640259
theme_override_constants/separation = 50

[node name="B_Jugar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_d6tml")
theme_override_font_sizes/font_size = 61
text = "PLAY
"

[node name="B_Opciones" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_d6tml")
theme_override_font_sizes/font_size = 61
text = "OPCIONES"

[node name="B_salir" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_d6tml")
theme_override_font_sizes/font_size = 61
text = "SALIR
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.339
anchor_right = 0.5
anchor_bottom = 0.364
offset_left = -207.0
offset_top = -153.672
offset_right = 298.0
offset_bottom = -48.872
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.870588)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 0.823529)
theme_override_constants/shadow_offset_x = -5
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 23
theme_override_fonts/font = ExtResource("4_od41v")
theme_override_font_sizes/font_size = 70
text = "OPCIONES
"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -380.0
offset_top = -143.0
offset_right = 439.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="L_VIDEO" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_d6tml")
theme_override_font_sizes/font_size = 56
text = "VIDEO:"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="LabelFull" type="Label" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_d6tml")
theme_override_font_sizes/font_size = 23
text = "FullScreen
"

[node name="CheckBox1" type="CheckBox" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 1

[node name="L_SONIDO" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_d6tml")
theme_override_font_sizes/font_size = 56
text = "SONIDO:"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="LabelFull3" type="Label" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_d6tml")
theme_override_font_sizes/font_size = 23
text = "TODO
"

[node name="HSlider3" type="HSlider" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
max_value = 20.0
value = 20.0

[node name="LabelFull" type="Label" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_d6tml")
theme_override_font_sizes/font_size = 23
text = "Música
"

[node name="HSlider" type="HSlider" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
max_value = 20.0
value = 20.0

[node name="LabelFull2" type="Label" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_d6tml")
theme_override_font_sizes/font_size = 23
text = "sonidos fx
"

[node name="HSlider2" type="HSlider" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
max_value = 20.0
value = 20.0

[node name="Button" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "ATRÁS"

[connection signal="pressed" from="VBoxContainer/B_Jugar" to="." method="_on_b_jugar_pressed"]
[connection signal="pressed" from="VBoxContainer/B_Opciones" to="." method="_on_b_opciones_pressed"]
[connection signal="pressed" from="VBoxContainer/B_salir" to="." method="_on_b_salir_pressed"]
[connection signal="toggled" from="VBoxContainer2/HBoxContainer/CheckBox1" to="." method="_on_check_box_1_toggled"]
[connection signal="value_changed" from="VBoxContainer2/VBoxContainer/HSlider3" to="." method="_on_h_slider_3_value_changed"]
[connection signal="value_changed" from="VBoxContainer2/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer2/VBoxContainer/HSlider2" to="." method="_on_h_slider_2_value_changed"]
[connection signal="pressed" from="VBoxContainer2/Button" to="." method="_on_button_pressed"]
